# werbolg

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test.lispy  test.rusty  test.scheme
macro-quote/: Cargo.toml
macro-quote-types/: Cargo.toml
macro-quote-types/src/: lib.rs
macro-quote/src/: helper.rs  lib.rs  output.rs
src/: lang.rs  lib.rs  main.rs  value.rs
src/ast/: mod.rs
src/em/: bindings.rs  location.rs  mod.rs  stack.rs  value.rs
src/ir/: basic.rs  location.rs  mod.rs
src/lang/: common.rs  mod.rs  scheme.rs
src/lang/lispy/: ast.rs  mod.rs  parse.rs  token.rs
src/lang/rusty/: mod.rs  parse.rs  token.rs
werbolg-compile/: Cargo.toml
werbolg-compile/src/: bindings.rs  code.rs  compile.rs  defs.rs  environ.rs  errors.rs  hier.rs  instructions.rs  lib.rs  params.rs  prepare.rs  resolver.rs  symbols.rs
werbolg-compile/src/bindings/: bindings.rs  bindings_stack.rs  global_bindings.rs  local_bindings.rs  mod.rs  types.rs
werbolg-core/: Cargo.toml
werbolg-core/src/: basic.rs  bindings.rs  code.rs  environ.rs  id.rs  idvec.rs  ir.rs  lib.rs  lir.rs  location.rs  symbols.rs
werbolg-example1/: Cargo.toml
werbolg-example1/src/: lang.rs  main.rs  value.rs
werbolg-exec/: Cargo.toml
werbolg-exec/src/: allocator.rs  exec.rs  exec2.rs  lib.rs  refcount.rs  stack.rs  valuable.rs  value.rs
werbolg-exec2/: Cargo.toml
werbolg-exec2/src/: exec2.rs  lib.rs  value.rs
werbolg-interpret/: Cargo.toml
werbolg-interpret/src/: bindings.rs  lib.rs  value.rs
werbolg-ir-write/: Cargo.toml
werbolg-ir-write/src/: gen.rs  lang.rs  lib.rs  parse.rs
werbolg-lang-common/: Cargo.toml
werbolg-lang-common/src/: filemap.rs  fileunit.rs  lib.rs  report.rs  span.rs
werbolg-lang-lispy/: Cargo.toml
werbolg-lang-lispy/src/: ast.rs  lib.rs  parse.rs  token.rs
werbolg-lang-rusty/: Cargo.toml
werbolg-lang-rusty/src/: ast.rs  grammar.lalrpop  lib.rs  parse.rs  token.rs
werbolg-tales/: Cargo.toml
werbolg-tales/src/: args.rs  environ.rs  exec.rs  main.rs  params.rs  value.rs
werbolg-tests/: Cargo.toml
werbolg-tests/src/: lib.rs  value.rs
werbolg-tests/src/tests/: mod.rs
werbolg-tests/src/tests/assignment/: associativity.rs  mod.rs
werbolg-tests/src/tests/call/: bool.rs  int.rs  mod.rs
werbolg-tests/src/tests/numbers/: literals.rs  mod.rs
werbolg-tests/src/tests/return/: at_top_level.rs  in_function.rs  mod.rs
werbolg-tests/src/tests/variable/: allow_shadowing_on_parameter.rs  mod.rs  undefined_local.rs
