[package]
name = "werbolg"
version = "0.1.0"
edition = "2021"
description = "a multi language high level dynamic platform to execute in a safe environment with traps to rust defined function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "lang-lispy", "lang-rusty", "backend-bignum"]
std = []
lang-lispy = []
lang-rusty = ["ariadne", "chumsky", "logos"]
backend-smallnum = []
backend-bignum = ["num-bigint", "num-traits", "bigdecimal"]

[profile.release]
panic = 'abort'

[dependencies]
hashbrown = "0.14"
strum = { version = "0.25", default-features = false, features = ["derive"] }

logos = { version = "0.13", optional = true }
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
bigdecimal = { version = "0.4", optional = true }
ariadne = { version = "0.3", optional = true }
chumsky = { version = "0.9", features = [], optional = true }

[[bin]]
name = "testexec"
required-features = []
