[package]
name = "werbolg"
version = "0.1.0"
edition = "2021"
description = "a multi language high level dynamic platform to execute in a safe environment with traps to rust defined function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lang-lispy", "lang-rusty", "backend-bignum"]
std = []
lang-lispy = ["werbolg-lang-lispy"]
lang-rusty = ["werbolg-lang-rusty"]
backend-smallnum = []
backend-bignum = ["num-bigint", "num-traits", "bigdecimal"]

[profile.release]
panic = 'abort'

[dependencies]
hashbrown = "0.14"

werbolg-core = { path = "werbolg-core" }
werbolg-lang-common = { path = "werbolg-lang-common" }
werbolg-lang-rusty = { path = "werbolg-lang-rusty", optional = true }
werbolg-lang-lispy = { path = "werbolg-lang-lispy", optional = true }
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
bigdecimal = { version = "0.4", optional = true }

[[bin]]
name = "testexec"
required-features = []
