[package]
name = "werbolg"
version = "0.1.0"
edition = "2021"
description = "a multi language high level dynamic platform to execute in a safe environment with traps to rust defined function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lang-lispy", "lang-rusty", "backend-bignum"]
lang-lispy = ["werbolg-lang-lispy"]
lang-rusty = ["werbolg-lang-rusty"]
backend-smallnum = ["werbolg-core/backend-smallnum"]
backend-bignum = ["werbolg-core/backend-bignum"]

[profile.release]
panic = 'abort'

[dependencies]
hashbrown = "0.14"

werbolg-core = { path = "werbolg-core" }
werbolg-exec = { path = "werbolg-exec" }
werbolg-exec2 = { path = "werbolg-exec2" }
werbolg-lang-common = { path = "werbolg-lang-common" }
werbolg-lang-rusty = { path = "werbolg-lang-rusty", optional = true }
werbolg-lang-lispy = { path = "werbolg-lang-lispy", optional = true }
