[package]
name = "werbolg-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
backend-smallnum = []
backend-bignum = ["num-bigint", "num-traits", "bigdecimal"]

[dependencies]
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
bigdecimal = { version = "0.4", optional = true }
