[package]
name = "werbolg-ir-write"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
macro-quote = { path = "../macro-quote" }
macro-quote-types = { path = "../macro-quote-types" }

[dev-dependencies]
