[package]
name = "werbolg-tales"
version = "0.1.0"
edition = "2024"
description = "tools to tell the werbolg tales"

[features]
default = ["lang-lispy", "lang-rusty"]
lang-lispy = ["werbolg-lang-lispy"]
lang-rusty = ["werbolg-lang-rusty"]

[dependencies]
hashbrown = "0.14"
werbolg-core = { path = "../werbolg-core" }
werbolg-exec = { path = "../werbolg-exec" }
werbolg-compile = { path = "../werbolg-compile" }
werbolg-lang-common = { path = "../werbolg-lang-common" }
werbolg-lang-rusty = { path = "../werbolg-lang-rusty", optional = true }
werbolg-lang-lispy = { path = "../werbolg-lang-lispy", optional = true }
